fix many bugs
